Changed the style of the page.
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/ThermoFluids/templates/ThermoFluids/HeatExchange1D.html
+++ b/ThermoFluids/templates/ThermoFluids/HeatExchange1D.html
@@ -59,7 +59,7 @@ angular.module('HeatExchange1D', ['ui.bootstrap', 'smo'])
 			</div>
 			<div class="section">		
 				<div ng-show="wireHeating.inputCommunicator.dataReceived"><button ng-disabled="!wireHeating.inputCommunicator.fieldsValid" 
-					 class="btn btn-default" ng-click="wireHeating.compute()">Compute</button>
+					 class="btn btn-primary" ng-click="wireHeating.compute()">Compute</button>
 				</div>
 			</div>
 			<div class="section"> 
@@ -74,7 +74,7 @@ angular.module('HeatExchange1D', ['ui.bootstrap', 'smo'])
 			</div>
 			<div class="section">		
 				<div ng-show="cryogenicPipe.inputCommunicator.dataReceived"><button ng-disabled="!cryogenicPipe.inputCommunicator.fieldsValid" 
-					 class="btn btn-default" ng-click="cryogenicPipe.compute()">Compute</button>
+					 class="btn btn-primary" ng-click="cryogenicPipe.compute()">Compute</button>
 				</div>
 			</div>
 			<div class="section"> 
