--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -110,8 +110,10 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 		  		<li ng-repeat="input in fluidProps.inputs track by $index" ng-class="getTabClass($index)">
 			  		<a ng-attr-id="FP{{$index + 1}}Tab" data-target="#FluidPoint{{$index + 1}}" role="tab" data-toggle="tab" >Fluid point {{$index + 1}}</a>			  		
 		  		</li>
-			  	<li><a data-target="" id="FluidPointNew" ng-click="createNewTab()">+</a></li>
-			  	<li><a data-target="" ng-click="delLastTab()">-</a></li>			  	
+		  		<li><a><smo-button action="createNewTab()" icon="plus"></a></li>
+		  		<li><a><smo-button action="delLastTab()" icon="minus"></smo-button></a></li>
+<!-- 			  	<li><a data-target="" id="FluidPointNew" ng-click="createNewTab()"><div smo-icon="plus"></div></a></li> -->
+<!-- 			  	<li><a data-target="" ng-click="delLastTab()"><div smo-icon="minus"></div></a></li>			  	 -->
 			</ul>		
 			<div class="tab-content">
 				<div ng-repeat="input in fluidProps.inputs track by $index" ng-class="'tab-pane '+ getTabClass($index)" id="FluidPoint{{$index + 1}}">					
