--- a/static/css/SmoInputOutputView.css
+++ b/static/css/SmoInputOutputView.css
@@ -11,20 +11,38 @@
 [smo-field-group], .converter {
 	display: inline-block;
 	margin-bottom: 20px;
-	margin-right: 70px;
+	margin-left: 20px;
+	margin-right: 20px;
 	vertical-align:top;
 }
 
+/* Variants:
+ - original blue color: #0875CA
+ - darker orange: #B68700
+ - bright orange: #F6922E
+ - 
+*/
+
 /* Field group label style */
 .field-group-label {
-	background-color: #BABABA;
+	background-color: #0875CA;
+	color: white;
 	font-size: large;
 	text-align: center;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.field-group-container {
+	background-color: #ABBFCF;
+	border: 2px solid #0875CA;
+	padding: 10px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 /* Super group */
 .nav-tabs.super-group {
-	
 }
 .super-group {
 /* 	border-style: solid;  */
@@ -36,8 +54,17 @@
 }
 
 [smo-super-group-set] {
-/* 	margin-bottom: 20px; */
 	margin-top: 20px;
+}
+
+[smo-super-group-set] > .nav-tabs, #FluidPointTabs.nav-tabs {
+	/* Put a line under the nav tabs */
+	border-bottom: 2px solid #0875CA;
+}
+
+[smo-super-group-set] > .nav-tabs > li, #FluidPointTabs.nav-tabs > li {
+	/* Hide the line under the active tab */
+	margin-bottom: -2px;
 }
 
 
@@ -54,9 +81,11 @@
 }
 
 /* Active tab */
-/* .nav-tabs.super-group > li.active > a, .nav-tabs.super-group > li.active > a:hover, .nav-tabs.super-group > li.active > a:focus { */
-/* 	cursor: default; */
-/* } */
+[smo-super-group-set] > .nav-tabs > li.active > a, #FluidPointTabs.nav-tabs > li.active > a {
+	border-left: 2px solid #0875CA;
+	border-top: 2px solid #0875CA;
+	border-right: 2px solid #0875CA;
+}
 
 /* Field */
 [smo-quantity], [smo-quantity], [smo-choice], [smo-string] {
@@ -147,21 +176,28 @@
 }
 /* Record array table editor */
 .record-array {
-	display: inline-block;
-	width: 1000px;
 	position: absolute;
-	z-index: 10000;
-	left: 190px;
+	position: fixed;
+	left: 0px;
+	right: 0px;
+	top: 0px;
+	bottom: 0px;
 	white-space: nowrap;
-	background-color: white;
-	border: 1px solid black;
-	text-align: center;
+	z-index: 10000;
+	background: rgba(0, 0, 0, 0.8);
+	padding-left: 200px;
+	padding-top: 100px;
+	overflow: scroll;
 }
 
 .record-array > div {
 	display: inline-block;
 	vertical-align: top;
 	position: relative;
+}
+
+.record-array > div > table {
+	border: 5px solid white;
 }
 
 /* Unit Converter specific styles */
