--- a/templates/Base.html
+++ b/templates/Base.html
@@ -94,23 +94,26 @@
 	        </div>
 			<div style="margin-left: 120px;">
 			{% block content %}
-				<h1 class="title">SmoWeb Computational Platform</h1>
-				<div class="align-center" style="margin-top: 50px;">
-					<img width="400px" src="{% static 'ThermoFluids/StateDiagram3D.svg' %}"></img>
-					<img width="400px" src="{% static 'ThermoFluids/HeatPump.svg' %}"></img>
-				</div>		
-				
-				<div class="docview">
-					<div class="document">
+				<div class="page-container">
+					<h1 class="title">SmoWeb Computational Platform</h1>
+					<div class="align-center" style="margin-top: 50px;">
+						<img width="400px" src="{% static 'ThermoFluids/StateDiagram3D.svg' %}"></img>
+						<img width="400px" src="{% static 'ThermoFluids/HeatPump.svg' %}"></img>
+					</div>
+					<div style="background: white; padding: 20px;">		
 						<p>
-							Welcome to <strong>SmoWeb</strong>, the open computational
-							platform from 
+							Welcome to <strong>SmoWeb</strong>, the open computational platform from 
 							<a class="reference external" href="http://www.sysmoltd.com">SysMo</a>. Here you will find a
 							number of one-page apps that could be used to tackle various
 							engineering problems. Please select the appropriate page/app from
 							the navigation bar on the top.
 						</p>
-					</div>
+					</div>	
+						
+<!-- 					<div class="docview"> -->
+<!-- 						<div class="document"> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
 				</div>
 			{% endblock %}
 			</div>
