--- a/static/css/Base.css
+++ b/static/css/Base.css
@@ -12,7 +12,7 @@ body {
 /*     background-repeat: repeat; */
 /*     background-position: left top; */
 	/* Variant 3*/
-	background-color: #3a678a;
+	background-color: #DEB03E;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 14px;
 	line-height: 1.42857;
