Introduced distributed tasks with celery and connection to MongoDB
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/ThermoFluids/templates/ThermoFluids/CryogenicInsulation.html
+++ b/ThermoFluids/templates/ThermoFluids/CryogenicInsulation.html
@@ -43,7 +43,7 @@ angular.module('CryogenicInsulation', ['ui.bootstrap', 'smo'])
 			</div>
 			<div class="section"> 		
 				<div ng-show="cryogenicInsulation.inputCommunicator.dataReceived"><button ng-disabled="!cryogenicInsulation.inputCommunicator.fieldsValid" 
-					 class="btn btn-default" ng-click="compute()">Compute</button>
+					 class="btn btn-primary" ng-click="compute()">Compute</button>
 				</div>
 			</div>
 			<div class="section"> 
