--- a/ThermoFluids/templates/ThermoFluids/FreeConvection.html
+++ b/ThermoFluids/templates/ThermoFluids/FreeConvection.html
@@ -59,7 +59,7 @@ angular.module('FreeConvection', ['ui.bootstrap', 'smo'])
 			</div>
 			<div class="section"> 		
 				<div ng-show="convectionExternal.inputCommunicator.dataReceived"><button ng-disabled="!convectionExternal.inputCommunicator.fieldsValid" 
-					 class="btn btn-default" ng-click="computeExternal()">Compute</button>
+					 class="btn btn-primary" ng-click="computeExternal()">Compute</button>
 				</div>
 			</div>
 			<div class="section"> 
@@ -76,7 +76,7 @@ angular.module('FreeConvection', ['ui.bootstrap', 'smo'])
 			</div>
 			<div class="section"> 		
 				<div ng-show="convectionInternal.inputCommunicator.dataReceived"><button ng-disabled="!convectionInternal.inputCommunicator.fieldsValid" 
-					 class="btn btn-default" ng-click="computeInternal()">Compute</button>
+					 class="btn btn-primary" ng-click="computeInternal()">Compute</button>
 				</div>
 			</div>
 			<div class="section"> 
