--- a/ThermoFluids/templates/ThermoFluids/HeatPump.html
+++ b/ThermoFluids/templates/ThermoFluids/HeatPump.html
@@ -46,7 +46,7 @@ angular.module('HeatPump', ['ui.bootstrap', 'smo'])
 			</div>
 			<div class="section"> 		
 				<div ng-show="heatPump.inputCommunicator.dataReceived"><button ng-disabled="!heatPump.inputCommunicator.fieldsValid" 
-					 class="btn btn-default" ng-click="compute()">Compute</button>
+					 class="btn btn-primary" ng-click="compute()">Compute</button>
 				</div>
 			</div>
 			<div class="section"> 
