--- a/static/css/Base.css
+++ b/static/css/Base.css
@@ -131,7 +131,8 @@ body {
   display: block;    
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-  background-color: #E6E6FA;
+  background-image: url("/static/img/GreyStripes.png");
+  background-repeat: repeat;
   border-right: 1px solid #eee;
   width: 180px;
   padding-top: 20px;
@@ -143,8 +144,9 @@ body {
 /* Sidebar navigation */
 
 .nav-sidebar {
-  display: inline-block;
-  background-color: #E6E6FA;	
+	display: inline-block;
+	background-image: url("/static/img/GreyStripes.png");
+	background-repeat: repeat;
 }
 
 .nav-sidebar > li {
@@ -290,4 +292,69 @@ table.nice-table tr:nth-child(odd) {
 	font-style: italic;
 }
 
+/*
+Tooltip
+*/
 
+/* Add this attribute to the element that needs a tooltip */
+[data-tooltip] {
+	position: relative;
+	z-index: 2;
+	cursor: pointer;
+}
+
+/* Hide the tooltip content by default */
+[data-tooltip]:before,
+[data-tooltip]:after {
+  visibility: hidden;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+	opacity: 0;
+	pointer-events: none;
+}
+
+/* Position tooltip above the element */
+[data-tooltip]:before {
+	position: absolute;
+	bottom: 150%;
+	left: 50%;
+	margin-bottom: 5px;
+	margin-left: -80px;
+	padding: 7px;
+	width: 160px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius:    3px;
+	border-radius:         3px;
+	background-color: #000;
+	background-color: hsla(0, 0%, 20%, 0.9);
+	color: #fff;
+	content: attr(data-tooltip);
+	text-align: center;
+	font-size: 14px;
+	line-height: 1.2;
+}
+
+/* Triangle hack to make tooltip look like a speech bubble */
+/* [data-tooltip]:after { */
+/* 	position: absolute; */
+/* 	bottom: 150%; */
+/* 	left: 50%; */
+/* 	margin-left: -5px; */
+/* 	width: 0; */
+/* 	border-top: 5px solid #000; */
+/* 	border-top: 5px solid hsla(0, 0%, 20%, 0.9); */
+/* 	border-right: 5px solid transparent; */
+/* 	border-left: 5px solid transparent; */
+/* 	content: " "; */
+/* 	font-size: 0; */
+/* 	line-height: 0; */
+/* } */
+
+/* Show tooltip content on hover */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
+	visibility: visible;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+	opacity: 1;
+}
